examples/06_private_fields.on
// ---------------------------------------------------------------------
// Private fields and the constructor pattern
// ---------------------------------------------------------------------
// Shows the `pub` visibility modifier on fields and why static
// constructors are the idiomatic way to keep invariants enforced.
//
// Run with:
//   cargo run --bin oryn -- examples/06_private_fields.on
//
// Note: in a single file, `pub` doesn't gate anything — everything in
// the same module can see everything. The rules start to bite when
// code in another module tries to touch a non-`pub` field. See the
// `modules/` example for that cross-file story.

struct Color {
    pub r: int
    pub g: int
    pub b: int

    // `alpha` is private (no `pub`). Code outside this struct definition
    // cannot read or write it directly, nor include it in a Color
    // literal — which means outsiders have to go through a static
    // constructor like `Color.rgb(...)` below to create a Color.
    alpha: int

    // Opaque-ish constructor: callers give r/g/b, we pick a sensible
    // alpha. This is the only way cross-module code can build a Color.
    pub fn rgb(r: int, g: int, b: int) -> Color {
        return Color { r: r, g: g, b: b, alpha: 255 }
    }

    // Another constructor that exposes alpha explicitly — still the
    // only way to set it, but opt-in.
    pub fn rgba(r: int, g: int, b: int, a: int) -> Color {
        return Color { r: r, g: g, b: b, alpha: a }
    }

    // Accessor for the private field. Consumers ask politely instead
    // of reaching into `alpha` directly.
    pub fn opacity(self) -> int {
        return self.alpha
    }
}

let red: Color = Color.rgb(255, 0, 0)
let translucent: Color = Color.rgba(0, 128, 255, 64)

print("red = ({red.r}, {red.g}, {red.b}) alpha={red.opacity()}")
print("translucent alpha = {translucent.opacity()}")

// The `pub` fields can be read and mutated directly. Try changing
// a private field from outside the struct and the compiler will stop you:
//   red.alpha = 0   // error: field `alpha` is private
red.r = 200
print("after tweak: r = {red.r}")
